<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.ruanghukum.views.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_consultationFragment"
            app:destination="@id/navigation_consultation" />
        <action
            android:id="@+id/action_homeFragment_to_documentPrepFragment"
            app:destination="@id/documentPrepFragment" />
        <action
            android:id="@+id/action_homeFragment_to_aIChatFragment"
            app:destination="@id/AIChatFragment" />
        <action
            android:id="@+id/action_navigation_home_to_articleDetailFragment"
            app:destination="@id/articleDetailFragment"
            app:popUpTo="@+id/navigation_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_updates"
            app:destination="@id/navigation_updates"
            app:popUpTo="@+id/navigation_home"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_updates"
        android:name="com.example.ruanghukum.views.updates.UpdatesFragment"
        android:label="@string/title_updates"
        tools:layout="@layout/fragment_updates" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.ruanghukum.views.notification.NotificationFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.ruanghukum.views.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_consultation"
        android:name="com.example.ruanghukum.views.consultation.home.ConsultationFragment"
        android:label="@string/title_consultation"
        tools:layout="@layout/fragment_consultation" >
    </fragment>

    <fragment
        android:id="@+id/documentPrepFragment"
        android:name="com.example.ruanghukum.views.documentPrep.DocumentPrepFragment"
        android:label="fragment_document_prep"
        tools:layout="@layout/fragment_document_prep">

        <action
            android:id="@+id/action_documentPrepFragment_to_documentPrepData"
            app:destination="@id/documentPrepData" />

        <action
            android:id="@+id/action_documentPrepFragment_to_documentPrepPreview"
            app:destination="@id/documentPrepPreview" />

    </fragment>
    <fragment
        android:id="@+id/AIChatFragment"
        android:name="com.example.ruanghukum.views.aiChat.AIChatFragment"
        android:label="fragment_a_i_chat"
        tools:layout="@layout/fragment_a_i_chat" >
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.ruanghukum.views.auth.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:popUpTo="@+id/loginFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.ruanghukum.views.auth.register.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@+id/registerFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/documentPrepData"
        android:name="com.example.ruanghukum.views.documentPrep.documentPrepData.DocumentPrepData"
        android:label="fragment_document_prep_data"
        tools:layout="@layout/fragment_document_prep_data">

        <action
            android:id="@+id/action_documentPrepData_to_documentPrepPreview"
            app:destination="@id/documentPrepPreview" />

    </fragment>

    <fragment
        android:id="@+id/documentPrepPreview"
        android:name="com.example.ruanghukum.views.documentPrep.documentPrepPreview.DocumentPrepPreview"
        android:label="fragment_document_prep_data"
        tools:layout="@layout/fragment_document_prep_data">

        <action
            android:id="@+id/action_documentPrepPreview_to_documentPrepFragment"
            app:destination="@id/documentPrepFragment" />

    </fragment>
    <fragment
        android:id="@+id/articleDetailFragment"
        android:name="com.example.ruanghukum.views.article.articleDetail.ArticleDetailFragment"
        android:label="ArticleDetailFragment" />

</navigation>